Bug 959272 - Fix feed folder rename/move/copy and db sync issues. r=mkmelin